--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</div>
 
 	<div class="car">
-		<img class="car2" src="car5.png" width="780" height="350">
+		<img class="car2" src="https://raw.githubusercontent.com/tluper94/keylesscar/master/car5.png" width="780" height="350">
 	</div>
 	<script type="text/javascript" src="script.js"></script>
 
